--- a/Myerp/Tpl/Chanpin/customer.html
+++ b/Myerp/Tpl/Chanpin/customer.html
@@ -9,7 +9,7 @@
             <div id="resultdiv" class="resultdiv"></div>
             <div id="resultdiv_2" class="resultdiv"></div>
             
-            <include file="Index:searchxianlu" />
+            <include file="Index:search_xianlu" />
             
             <table cellpadding="0" cellspacing="0" width="100%" class="list view">
               <tbody>
