--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -9,7 +9,7 @@
   <div id="content" style="margin-left:170px;">
     <div id="resultdiv" class="resultdiv"></div>
     <div id="resultdiv_2" class="resultdiv"></div>
-    <include file="Index:searchxianlu" />
+    <include file="Index:search_xianlu" />
     
     <div id="mysearchdiv" style="margin:10px 0 0 0;">
       <ul id="searchTabs" class="tablist tablist_2">
