--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -79,7 +79,7 @@ function exports()
           </php>
         <input type="hidden" name="title" value="<php>echo trim($baozhang['title'])</php>"/>
         <tr>
-          <td valign="top" scope="row" style="min-width:100px; width:100px;"> 人数: </td>
+          <td valign="top" scope="row" style="min-width:100px; width:100px;"> 参团人数（领队导游不包含在内）: </td>
           <td valign="top" scope="row" style="min-width:100px;"><input name="renshu" type="text" value="<php>echo trim($baozhang['renshu'])</php>" check="^\S+$" warning="人数不能为空,且不能含有空格"></td>
           <td valign="top" scope="row" style="min-width:100px; width:100px;"> 接团单位: </td>
           <td valign="top" scope="row" style="min-width:300px;"><input name="jietuandanwei" type="text" value="<php>echo trim($baozhang['datatext']['jietuandanwei'])</php>" check="^\S+$" warning="接团单位不能为空,且不能含有空格"></td>
