--- a/Myerp/Tpl/Chanpin/zituandingdan.html
+++ b/Myerp/Tpl/Chanpin/zituandingdan.html
@@ -59,7 +59,7 @@
                   <th scope="col" nowrap="nowrap"><div> 领队数 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 售价 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 提成类型 </div></th>
-                  <th scope="col" nowrap="nowrap"><div> 所属人 </div></th>
+                  <th scope="col" nowrap="nowrap"><div> 收客人 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 订单类型 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 状态 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
