--- a/Myerp/Tpl/Xiaoshou/baomingnext.html
+++ b/Myerp/Tpl/Xiaoshou/baomingnext.html
@@ -60,7 +60,7 @@ function save(){
           <td align="left" style="height: 32px; "><span id="lbSyno"><{$shengyu}></span></td>
         </tr>
         <tr>
-          <td align="left" style="height: 32px;">所属人及所属部门：</td>
+          <td align="left" style="height: 32px;">收客人及所属部门：</td>
           <td align="left" style="height: 32px"><php>echo $_REQUEST['owner']</php>/<php>echo $bumen['title']</php></td>
           <td align="left" style="height: 32px"> 可选大客户：</td>
           <td align="left" style="height: 32px"><php>echo $_REQUEST['bigmanID']</php></td>
