--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -93,6 +93,9 @@
       <php>}}if(A("Method")->checkshenheback($chanpinID,'线路')){</php>
       <input type="button" style="float:right" value=" 审核回退 " name="button" onclick="shenhe_back(<{$chanpinID}>,'线路');">
 	  <php>}</php>
+      <label style="float:right; margin:2px 4px 0 0; font-size:12px"> | 审核流程：<strong><{$tem_cp['shenhe_remark']}></strong></label>
+      <label style="float:right; margin:2px 4px 0 0; font-size:12px">锁状态：<strong><{$tem_cp['islock']}></strong></label>
+      
   
   <php>if('基本信息' == $nowDir['title']){</php>
   <input type="button" value="保存" name="button" class="button primary" onclick="if(CheckForm('form','resultdiv_2')) save();">
