--- a/Myerp/Tpl/Dijie/danxiangfuwu.html
+++ b/Myerp/Tpl/Dijie/danxiangfuwu.html
@@ -6,7 +6,7 @@
   <div id="content" style="margin-left:5px; padding-left:0px; border-left:none">
     <div id="resultdiv" class="resultdiv"></div>
     <div id="resultdiv_2" class="resultdiv"></div>
-    <include file="Index:searchxianlu" />
+    <include file="Index:search_xianlu" />
     
     <div id="mysearchdiv" style="margin:10px 0 0 0;">
       <ul id="searchTabs" class="tablist tablist_2">
