--- a/Myerp/Tpl/Index/login.html
+++ b/Myerp/Tpl/Index/login.html
@@ -1,34 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>旅游ERP</title>
-<link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/css/yui.css">
-<link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/css/deprecated.css">
-<link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/css/style.css">
+<include file="Index:simple_header" />
 
-<load href="__PUBLIC__/myerp/Thinkjs/Base.js" />
-<load href="__PUBLIC__/myerp/Thinkjs/prototype.js" />
-<load href="__PUBLIC__/myerp/Thinkjs/mootools.js" />
-<load href="__PUBLIC__/myerp/ThinkAjax_GP.js" />
-<load href="__PUBLIC__/myerp/Thinkjs/Form/CheckForm_GP.js" />
-<link rel="stylesheet" type="text/css" href="<{:__PUBLIC__}>/myerp/css/gaopeng.css">
-
-</head>
-
-<div id="header">
-  <div id="companyLogo"> <img src="<{:__PUBLIC__}>/myerp/images/company_logo.png" width="212" height="40" border="0"> </div>
+  <div id="companyLogo"> <img src="<{:__PUBLIC__}>/myerp/images/company_logo.png" border="0"> </div>
   <div id="globalLinks">
     <ul>
-      <li> <a id="employees_link" >员工</a> </li>
-      <li> <span>|</span> <a id="training_link">培训</a> </li>
+      <li> <a id="training_link">培训</a> </li>
       <li> <span>|</span> <a id="help_link">帮助</a> </li>
       <li> <span>|</span> <a id="about_link">关于</a> </li>
     </ul>
   </div>
   <div class="clear"></div>
-  <div class="clear"></div>
-  <br>
   <br>
   <div id="moduleList">
     <ul>
@@ -39,100 +19,69 @@
   <div class="line"></div>
 </div>
 <div id="main">
-  <div id="content" class="noLeftColumn">
+  <div id="content" class="noLeftColumn" style="border-bottom:#DDD solid 2px">
             <div id="resultdiv" class="resultdiv" style="text-align:center"></div>
             <div id="resultdiv_2" class="resultdiv"></div>
             
-    <table style="width:100%">
-      <tbody>
-        <tr>
-          <td><link rel="stylesheet" type="text/css" media="all" href="<{:__PUBLIC__}>/myerp/css/login.css">
-            <table cellpadding="0" align="center" width="100%" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td align="center"><div class="loginBoxShadow" style="width: 460px;">
-                      <div class="loginBox">
-                        <table cellpadding="0" cellspacing="0" border="0" align="center">
-                          <tbody>
-                            <tr>
-                              <td align="left"><b>欢迎来到</b><br>
-                                <img src="<{:__PUBLIC__}>/myerp/images/sugar_md_open.png" width="340" height="25" style="margin: 5px 0;"></td>
-                            </tr>
-                            <tr>
-                              <td align="center"><div class="login">
             <form id="form" name="form" method="post">
               <input type="hidden" name="ajax" value="1"> <!--ajax提示-->
-                                    <table cellpadding="0" cellspacing="2" border="0" align="center" width="100%">
-                                      <tbody>
-                                        <tr>
-                                          <td scope="row" width="1%"></td>
-                                          <td scope="row"><span id="post_error" class="error"></span></td>
-                                        </tr>
-                                        <tr>
-                                          <td scope="row" colspan="2" width="100%" style="font-size: 12px; font-weight: normal; padding-bottom: 4px;"> 请输入用户名和密码 
-                                        </tr>
-                                        <tr>
-                                          <td>&nbsp;</td>
-                                        </tr>
-                                        <tr>
-                                          <td scope="row" width="30%">用户名:</td>
-                                          <td width="70%"><input type="text" size="35" tabindex="1" id="user_name" name="loginname" ></td>
-                                        </tr>
-                                        <tr>
-                                          <td scope="row">密码:</td>
-                                          <td width="30%"><input type="password" size="26" tabindex="2" id="user_password" name="password" value=""></td>
-                                        </tr>
-                                        <tr>
-                                          <td scope="row">记住我:</td>
-                                          <td width="30%">
-                                            <input tabindex="3" type="checkbox" name="rememberMe" id="rememberMe" value="on" class="checkbox"/>&nbsp;&nbsp;下次自动登录
-                                          </td>
-                                        </tr>
-                                        <tr>
-                                          <td>&nbsp;</td>
-                                        </tr>
-                                        <tr>
-                                          <td>&nbsp;</td>
-                                          <td><input title="登录" class="button primary" type="button" tabindex="4" id="login_button" name="Login" value="登录" onclick="dologin();">
-                                            <br>
-                                            &nbsp;</td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
+				<table width="350px" cellspacing="0" cellpadding="0" border="0" align="center">
+				<tbody><tr>
+					<td style="padding-bottom: 10px;"><b>欢迎来到</b><br>
+						<img width="340" height="25" alt="Sugar" src="<{:__PUBLIC__}>/myerp/images/sugar_md.png">
+					</td>
+				</tr>
+				<tr>
+					<td align="center">
+						<div class="edit view login">
+								<table width="100%" cellspacing="2" cellpadding="0" border="0" align="center">
+																		<tbody><tr>
+										<td width="1%" scope="row"></td>
+										<td scope="row"><span class="error" id="post_error"></span></td>
+									</tr>
+																	<tr>
+										<td width="100%" style="font-size: 12px; padding-bottom: 5px; font-weight: normal;" colspan="2" scope="row">请输入用户名和密码。
+										</td>
+									</tr>
+									<tr>
+										<td width="30%" scope="row">用户名:</td>
+										<td width="70%"><input type="text" size="35" tabindex="1" id="user_name" name="loginname" >
+									</td></tr>
+									<tr>
+										<td scope="row">密码:</td>
+										<td width="30%"><input type="password" size="26" tabindex="2" id="user_password" name="password" value="">
+									</td></tr>
+									<tr>
+										<td scope="row">记住我:</td>
+										<td width="30%"><input tabindex="3" type="checkbox" name="rememberMe" id="rememberMe" value="on" class="checkbox"/>&nbsp;&nbsp;下次自动登录
+									</td></tr>
+									<tr>
+										<td>&nbsp;</td>
+										<td><input title="登录" class="button primary" type="button" tabindex="4" id="login_button" name="Login" value="登录" onClick="dologin();"><br>&nbsp;</td>		
+									</tr>
+								</tbody></table>
+							</form>
+						</div>
+					</td>
+				</tr>
+			</tbody>
+            </table>  
             </form>
-                                </div></td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </div>
-                    </div></td>
-                </tr>
-              </tbody>
-            </table>
-            <br>
-            <br></td>
-        </tr>
-      </tbody>
-    </table>
   </div>
   <div class="clear"></div>
+  
 </div>
-<div id="bottomLinks"> </div>
-<div id="footer"> 旅游ERP<br>
-  <div id="copyright">这里是版权信息</div>
-</div>
+<tp:includeCA file="Index:footer" />
 </body>
 </html>
 
-
 <script>
-
 function dologin(){
 	ThinkAjax.sendForm('form','<{:SITE_INDEX}>Index/dologin',doComplete,'resultdiv');
 }
 function doComplete(data,status){
 	if(status == 1){
-			window.location.href='<{:SITE_INDEX}>Chanpin';
+			window.location.href='<{:SITE_INDEX}>Message/index/datatype/公告';
 	}
 }
 </script>
