--- a/Myerp/Tpl/Index/search_user.html
+++ b/Myerp/Tpl/Index/search_user.html
@@ -37,12 +37,12 @@
               <input title="清除" class="button" type="button" value=" 清除 " onclick="clearsearch();">
         </div>
         
-        <php>if($_GET){</php>
+        <php>unset($_REQUEST['_URL_']);if($_REQUEST){ </php>
         <div style="margin-top:10px;">
             <table width="100%" cellpadding="0" cellspacing="0" class="formHeader h3Row" style="margin-top:0px;">
               <tbody>
                 <tr>
-                  <td nowrap=""><h3><span>查询：<label style="color:red"><php>foreach($_GET as $v) echo $v."&nbsp;"</php></label></span></h3></td>
+                  <td nowrap=""><h3><span>查询：<label style="color:red"><php>foreach($_REQUEST as $v) echo $v."&nbsp;"</php></label></span></h3></td>
                 </tr>
               </tbody>
             </table>
