Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -123,7 +123,7 @@ function shenheshow_doit(chanpinID){
 	  jQuery('#shenhediv').hide();
 	  return ;
    }
-    getshenhemessage("Index.php?s=/Message/getshenhemessage/chanpinID/"+chanpinID);
+    getshenhemessage("index.php?s=/Message/getshenhemessage/chanpinID/"+chanpinID);
 	obj =document.getElementById('showshenhe');
 	objleft = getPosLeft(obj) - 370;
 	objtop = getPosTop(obj) + 20;
