--- a/Myerp/Tpl/Chanpin/shenhe.html
+++ b/Myerp/Tpl/Chanpin/shenhe.html
@@ -220,7 +220,7 @@ function shenheshow_doit(chanpinID,obj){
 	  jQuery('#shenhediv').hide();
 	  return ;
    }
-    getshenhemessage("Index.php?s=/Message/getshenhemessage/chanpinID/"+chanpinID);
+    getshenhemessage("index.php?s=/Message/getshenhemessage/chanpinID/"+chanpinID);
 	objleft = getPosLeft(obj) - 370;
 	objtop = getPosTop(obj) + 20;
 	jQuery('#shenhediv').css({top:objtop , left:objleft });
