--- a/Myerp/Tpl/Index/search_xianlu.html
+++ b/Myerp/Tpl/Index/search_xianlu.html
@@ -99,7 +99,7 @@ function setsearch(status)
 {
 	jQuery.ajax({
 		  type:	"POST",
-		  url:	"<{:SITE_INDEX}>Chanpin/setsearch",
+		  url:	"<{:SITE_INDEX}>Index/setsearch",
 		  async: false,
 		  data:	"status=" + status ,
 		  success:	function(msg){
